Update Dockerfile to use actions-runner base image

--- a/Dockerfile.github
+++ b/Dockerfile.github
@@ -1,19 +1,19 @@
-FROM ubuntu:22.04
+FROM ghcr.io/actions/actions-runner:2.304.0
+# for latest release, see https://github.com/actions/runner/releases
 
-# Install base dependencies
-RUN apt-get update && apt-get install -y curl sudo apt-transport-https lsb-release gnupg jq
+USER root
+
+# install curl and jq
+RUN apt-get update && apt-get install -y curl jq && \
+    apt-get clean && \
+    rm -rf /var/lib/apt/lists/*
 
 # Install Azure CLI
 RUN curl -sL https://aka.ms/InstallAzureCLIDeb | bash
 
-# Install GitHub Actions runner
-WORKDIR /actions-runner
-RUN curl -O -L https://github.com/actions/runner/releases/download/v2.321.0/actions-runner-linux-x64-2.321.0.tar.gz && \
-    tar xzf ./actions-runner-linux-x64-2.321.0.tar.gz
-
-# Copy entrypoint script
 COPY github-actions-runner/entrypoint.sh ./entrypoint.sh
 RUN chmod +x ./entrypoint.sh
 
-# Default entrypoint
-ENTRYPOINT ["/entrypoint.sh"]
+USER runner
+
+ENTRYPOINT ["./entrypoint.sh"]
