--- a/Dockerfile.github
+++ b/Dockerfile.github
@@ -3,7 +3,9 @@ FROM ghcr.io/actions/actions-runner:2.304.0
 
 USER root
 
+# ------------------------------------------------------------------------------
 # Install base dependencies
+# ------------------------------------------------------------------------------
 RUN apt-get update && \
     apt-get install -y \
         curl \
@@ -11,7 +13,7 @@ RUN apt-get update && \
         unzip \
         ca-certificates \
         gnupg \
-        lsb-release && \
+        lsb-release \
         software-properties-common && \
     rm -rf /var/lib/apt/lists/*
 
