Add UTF-8 locale settings in Dockerfile
Set UTF-8 locale to avoid Unicode errors during package installation.

--- a/Dockerfile.github
+++ b/Dockerfile.github
@@ -3,6 +3,12 @@ FROM ghcr.io/actions/actions-runner:2.304.0
 
 USER root
 
+# --------------------------------------------------------------------------
+# Set UTF-8 locale to avoid Unicode errors during package installation
+# --------------------------------------------------------------------------
+ENV LANG=C.UTF-8
+ENV LC_ALL=C.UTF-8
+
 # ------------------------------------------------------------------------------
 # Install base dependencies
 # ------------------------------------------------------------------------------
